[metadata]
name = pyseoa
version = 0.2.3.post1
description = A seo analysis tool library written in python, with CLI support.
long_description = file: README.md
long_description_content_type = text/markdown
author = Mario Semper
author_email = mario.semper@masem.at
url = https://github.com/sempre76/pyseoa
license = MIT
classifiers = 
	Programming Language :: Python :: 3
	License :: OSI Approved :: MIT License
	Operating System :: OS Independent
	Intended Audience :: Developers
	Topic :: Internet :: WWW/HTTP :: Site Management

[options]
packages = find:
python_requires = >=3.7
install_requires = 
	requests
	beautifulsoup4
	tqdm

[options.entry_points]
console_scripts = 
	seo-analyze = pyseoa.cli:main

[egg_info]
tag_build = 
tag_date = 0

